[tool.poetry]
name = "notifiers"
version = "1.3.1"
description = "The easy way to send notifications"
authors = ["liiight <or.carmi82@gmail.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]
readme = "README.MD"
documentation = "https://notifiers.readthedocs.io/en/latest/"
repository = "https://github.com/liiight/notifiers"
exclude = ["notifiers.tests"]


[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
requestes = "^0.0.1"
jsonschema = "^4.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
codecov = "^2.1.12"
pytest-cov = "^3.0.0"
sphinx-autodoc-annotation = "^1.0-1"
sphinx-rtd-theme = "^1.0.0"
bumpversion = "^0.6.0"
hypothesis = "^6.36.1"
pre-commit = "^2.17.0"
retry = "^0.9.2"
Sphinx = "^4.4.0"

[tool.poetry.scripts]
notifiers = "notifiers_cli.core:entry_point"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "online: marks tests running online",
]
