[project]
name = "notifiers"
version = "1.3.5"
description = "The easy way to send notifications"
authors = [{ name = "liiight", email = "or.carmi82@gmail.com" }]
requires-python = "~=3.7"
readme = "README.md"
license = "MIT"
keywords = [
    "notifications",
    "messaging",
    "email",
    "push",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "click>=8.0.3,<9",
    "jsonschema>=4.4.0,<5",
    "requests>=2.27.1,<3",
]

[project.urls]
Homepage = "https://github.com/liiight/notifiers"
Repository = "https://github.com/liiight/notifiers"
Documentation = "https://notifiers.readthedocs.io/en/latest/"

[project.scripts]
notifiers = "notifiers_cli.core:entry_point"

[dependency-groups]
dev = [
    "pytest>=7.1.2,<8",
    "codecov>=2.1.12,<3",
    "pytest-cov>=3.0.0,<4",
    "sphinx-autodoc-annotation~=1.0.post1",
    "sphinx-rtd-theme>=1.0.0,<2",
    "hypothesis>=6.37.0,<7",
    "pre-commit>=2.20.0,<3",
    "retry>=0.9.2,<0.10",
    "Sphinx>=5.0.2,<6",
]

[tool.hatch.build.targets.sdist]
include = [
    "notifiers",
    "notifiers_cli",
    "LICENSE",
]
exclude = ["tests"]

[tool.hatch.build.targets.wheel]
include = [
    "notifiers",
    "notifiers_cli",
    "LICENSE",
]
exclude = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "online: marks tests running online",
]
