[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "notifiers",
    "notifiers_cli",
    "LICENSE",
]

[project]
name = "notifiers"
version = "1.3.5"
description = "The easy way to send notifications"
authors = [{ name = "liiight", email = "python.notifiers@gmail.com" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = [
    "notifications",
    "messaging",
    "email",
    "push",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "click>=8.0.3",
    "jsonschema>=4.4.0",
    "requests>=2.27.1,<3",
]

[project.urls]
Homepage = "https://github.com/liiight/notifiers"
Repository = "https://github.com/liiight/notifiers"
Documentation = "https://notifiers.readthedocs.io/en/latest/"

[project.scripts]
notifiers = "notifiers_cli.core:entry_point"

[dependency-groups]
dev = [
    "pytest",
    "codecov",
    "pytest-cov",
    "sphinx-autodoc-annotation~=1.0.post1",
    "sphinx-rtd-theme",
    "hypothesis",
    "pre-commit",
    "retry",
    "Sphinx",
]

[tool.hatch.build.targets.sdist]
include = [
    "notifiers",
    "notifiers_cli",
    "LICENSE",
]
exclude = ["tests"]

[tool.pytest.ini_options]
markers = [
    "online: marks tests running online",
]
